[gd_scene load_steps=12 format=3 uid="uid://c1ureswoibxdf"]

[ext_resource type="PackedScene" uid="uid://bl62ho2m0jkt8" path="res://Enemies/Enemy.tscn" id="1_qr2mj"]
[ext_resource type="Script" uid="uid://dxkddjqkuay0" path="res://Enemies/Scripts/elephant.gd" id="2_px5xq"]
[ext_resource type="Texture2D" uid="uid://bnjcuom3a5v03" path="res://SpriteSheets/Horny elephant.png" id="3_px5xq"]
[ext_resource type="Texture2D" uid="uid://do5pi4dog83cl" path="res://SpriteSheets/speednoteaura.png" id="3_xpyd0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6asyi"]
atlas = ExtResource("3_xpyd0")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrcsj"]
atlas = ExtResource("3_xpyd0")
region = Rect2(320, 0, 320, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_rrcsj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6asyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrcsj")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xpyd0"]
atlas = ExtResource("3_px5xq")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_06xhy"]
atlas = ExtResource("3_px5xq")
region = Rect2(320, 0, 320, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_xpyd0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpyd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06xhy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qgkos"]
radius = 644.003

[node name="Enemy2" instance=ExtResource("1_qr2mj")]
script = ExtResource("2_px5xq")
speedMultipler = 3.0
speedTime = 1.0
SPEED = 200.0

[node name="AttackAnim" type="AnimatedSprite2D" parent="." index="0"]
modulate = Color(1, 1, 1, 0.768627)
show_behind_parent = true
rotation = 3.14159
scale = Vector2(4.73154, -4.00458)
sprite_frames = SubResource("SpriteFrames_rrcsj")

[node name="AnimatedSprite2D" parent="." index="1"]
sprite_frames = SubResource("SpriteFrames_xpyd0")

[node name="Area2D" type="Area2D" parent="." index="4"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource("CircleShape2D_qgkos")

[node name="SpeedUpTimer" type="Timer" parent="." index="5"]
wait_time = 1.5
autostart = true

[connection signal="animation_finished" from="AttackAnim" to="." method="_on_attack_anim_animation_finished"]
[connection signal="timeout" from="SpeedUpTimer" to="." method="_on_speed_up_timer_timeout"]
